Calculate total for each type